# kvdk

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  email.html  kvdk.pc.in
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  development-task.md  feature-request.md
.github/workflows/: ci.yml
allocator/: atomic_stack.h
benchmark/: alloc_bench.cpp  bench.cpp  generator.hpp  rand64.hpp  zipf.hpp
benchmark/utils/: rand64.hpp  range_iterator.hpp  zipf.hpp
cmake/: functions.cmake
debug/: debug.cpp
doc/: benchmark.md  impl_doc.md  impl_doc_cn.md  pmem_allocator.md  user_doc.md
engine/: alias.hpp  allocator.hpp  backup_log.hpp  c.cc  c.cpp  c_engine.cpp  cleaner.hpp  collection.hpp  configs.hpp  data_entry.hpp  data_record.cpp  data_record.hpp  db.cpp  define.hpp  dl_list.cpp  dl_list.hpp  dlinked_list.cpp  dlinked_list.hpp  dram_allocator.cpp  dram_allocator.hpp  engine.cpp  engine_impl.cpp  engine_impl.hpp  generic_list.hpp  hash_list.cpp  hash_list.hpp  hash_table.cpp  hash_table.hpp  hashes.cpp  hashes.hpp  kv_engine.cpp  kv_engine.hpp  kv_engine_cleaner.cpp  kv_engine_cleaner.hpp  kv_engine_hash.cpp  kv_engine_list.cpp  kv_engine_sorted.cpp  kv_engine_string.cpp  kv_engine_vhash.cpp  list_impl2.hpp  (+29 more)
engine/c/: kvdk_basic_op.cpp  kvdk_batch.cpp  kvdk_c.hpp  kvdk_hash.cpp  kvdk_list.cpp  kvdk_sorted.cpp  kvdk_string.cpp
engine/experimental/: hashptr_map.hpp  vhash.cpp  vhash.hpp  vhash_group.cpp  vhash_group.hpp  vhash_kv.cpp  vhash_kv.hpp
engine/hash_collection/: hash_list.cpp  hash_list.hpp  iterator.hpp  rebuilder.hpp
engine/hashmap/: hashmap.hpp  hashptr_multimap.hpp
examples/: c_example.cpp  tutorial.cpp
examples/graph_sim/: CMakeLists.txt  README.md
examples/graph_sim/bench/: graph_bench.cpp
examples/graph_sim/scripts/: build_rocksdb.sh
examples/graph_sim/src/: coding.hpp  graph_impl.cpp  graph_impl.hpp  graph_impl_test.cpp  options.hpp
examples/graph_sim/src/graph_algorithm/: top_n.hpp
examples/graph_sim/src/kv_engines/: KVEngine.cpp  KVEngine.hpp  engine_factory.hpp  kvdk.cpp  rocksdb.cpp
examples/tutorial/: CMakeLists.txt  c_api_tutorial.c  c_api_tutorial.cpp  cpp_api_tutorial.cpp  zset.c
java/: CMakeLists.txt  README.md  pom.xml  pom.xml.template
java/benchmark/: pom.xml
java/benchmark/scripts/: benchmark_all.sh
java/benchmark/src/main/java/io/pmem/kvdk/benchmark/: KVDKBenchmark.java
java/benchmark/src/main/java/io/pmem/kvdk/benchmark/util/: ConstantLongGenerator.java  LongGenerator.java  RangeLongGenerator.java
java/examples/: pom.xml
java/examples/src/main/java/io/pmem/kvdk/exmaples/: KVDKExamples.java
java/kvdkjni/: configs.cc  engine.cc  iterator.cc  kvdkjni.h  native_bytes_handle.cc  write_batch.cc
java/src/main/java/io/pmem/kvdk/: AbstractNativeReference.java  Configs.java  Engine.java  Iterator.java  KVDKException.java  KVDKObject.java  NativeBytesHandle.java  NativeLibraryLoader.java  Status.java  WriteBatch.java
java/src/test/java/io/pmem/kvdk/: ConfigsTest.java  EngineTest.java  EngineTestBase.java  IteratorTest.java  WriteBatchTest.java
persistent/: CMakeLists.txt  README.md
scripts/: basic_benchmarks.py  bench_all.py  bench_hashes.py  bench_hashes_debug.py  bench_hashes_zipf.py  bench_queues.py  bench_sorted.py  bench_string.py  benchmark_impl.py  clang_format.sh  clang_tidy.sh  compare.sh  cppstyle  init_devdax.sh  jenkin_test  run_benchmark.py  run_bencmarks.py  test_coverage.sh
tests/: CMakeLists.txt  allocator.hpp  c_api_test.hpp  c_api_test_hash.cpp  c_api_test_list.cpp  c_api_tutorial.c  debug.cpp  extensive_test.cpp  makefile  pmem_allocator_bench.cpp  stress_test.cpp  sync_point.cpp  sync_point.h  test_hashes.cpp  test_pmem_allocator.cpp  test_util.h  tests.cpp
volatile/: CMakeLists.txt  LICENSE  README.md
volatile/benchmark/: bench.cpp  generator.hpp
volatile/benchmark/utils/: rand64.hpp  zipf.hpp
volatile/doc/: benchmark.md  user_doc.md
volatile/engine/: alias.hpp  allocator.hpp  backup_log.hpp  data_record.cpp  data_record.hpp  dl_list.cpp  dl_list.hpp  dram_allocator.cpp  dram_allocator.hpp  engine.cpp  hash_table.hpp  kv_engine.cpp  kv_engine.hpp  kv_engine_cleaner.cpp  kv_engine_hash.cpp  kv_engine_list.cpp  kv_engine_sorted.cpp  kv_engine_string.cpp  logger.hpp  macros.hpp  snapshot.hpp  structures.hpp  thread_manager.hpp  write_batch_impl.hpp
volatile/engine/c/: kvdk_basic_op.cpp  kvdk_c.hpp  kvdk_hash.cpp
volatile/engine/hash_collection/: hash_list.cpp  hash_list.hpp  iterator.hpp  rebuilder.hpp
volatile/engine/list_collection/: iterator.hpp  list.cpp  list.hpp
volatile/engine/sorted_collection/: skiplist.cpp  skiplist.hpp
volatile/engine/utils/: codec.hpp
volatile/engine/version/: old_records_cleaner.cpp  old_records_cleaner.hpp  version_controller.hpp
volatile/examples/kvredis/: 0001-redis-with-kvdk.patch
volatile/examples/tutorial/: c_api_tutorial.c  cpp_api_tutorial.cpp  zset.c
volatile/include/kvdk/: configs.hpp  engine.h  types.hpp
volatile/include/kvdk/volatile/: comparator.hpp  configs.hpp  engine.h  engine.hpp  types.h
volatile/java/: CMakeLists.txt  README.md
volatile/java/benchmark/src/main/java/io/pmem/kvdk/benchmark/: KVDKBenchmark.java
volatile/java/benchmark/src/main/java/io/pmem/kvdk/benchmark/util/: RandomLongGenerator.java
volatile/java/examples/src/main/java/io/pmem/kvdk/exmaples/: KVDKExamples.java
volatile/java/kvdkjni/: configs.cc  engine.cc  iterator.cc  kvdkjni.h  native_bytes_handle.cc
volatile/java/src/main/java/io/pmem/kvdk/: Configs.java  Status.java  WriteOptions.java
volatile/java/src/test/java/io/pmem/kvdk/: ConfigsTest.java  EngineTest.java  EngineTestBase.java  IteratorTest.java
volatile/scripts/: clang_format.sh  clang_tidy.sh
volatile/scripts/results/commit-61ed9130/data_type-sorted-key_dist-random/vsize-24000-vsize_dist-constant-threads-64-collections-16-time-20220612-1127/: _fill  batch_insert_random  insert_random  read_write_random  update_random
volatile/tests/: CMakeLists.txt  c_api_test.hpp  stress_test.cpp  tests.cpp
(+437 files in other folders)
